css/universal.css
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');

:root {
    --main-bg-color: #303030;
    --sub1-bg-color: #363636;
    --sub2-bg-color: #404040;
    --main-text-color: #FFFFFF;
    --sub-text-color: #C6C6C6;
    --notdone-color: #FF3B30;
    --done-color: #28CD3C;
}

body {
    background-color: var(--main-bg-color);
    font-family: Roboto;
    color: var(--main-text-color);
    margin: 0;
}

p {
    margin: 0;
}

a, a:link, a:visited, a:hover, a:active {
    text-decoration: inherit;
    color: inherit;
}

.nav {
    width: 100%;
    height: 50px;
    background-color: var(--sub1-bg-color);
    box-shadow: 0px 2px 4px #000000;
    position: fixed;
    top: 0;
    z-index: 1000;
}

.container {
    margin-top: calc(50px + 2.5%);
    text-align: left;
}

.box-container {
    width: 95%;
    background-color: var(--sub2-bg-color);
    box-shadow: 0px 2px 2px #000000;
    border-radius: 8px;
    margin: 2.5% auto;
    overflow: hidden;
}

.title {
    margin: 0;
    font-size: 18pt;
    font-weight: 300;
}

.title--nav {
    line-height: 50px;
    text-align: center;
    width: calc(100% - 160px);
    margin: 0 auto;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
}

p.content {
    color: var(--sub-text-color);
    font-weight: 300;
    font-size: 11pt;
}

.box-bottom {
    background-color: var(--sub1-bg-color);
    overflow: hidden;
    padding: 5px;
}

.box-top {
    background-color: var(--sub1-bg-color);
    overflow: hidden;
    padding: 5px;
}

.dropdown-icon {
    background-image: url("../image/down-arrow.png");
}

.setting-button {
	display: inline-block;
}

.close-button-img {
    float: right;
    position: inherit;
    top: 16px;
    right: 10px;
}

.information-button-img-nav {
    position: absolute;
    width: 32px;
    height: 32px;
    top: 9px;
    right: 9px;
}

.button--menu {
    position: absolute;
    font-size: 14pt;
    font-weight: 300;
    border: 1px solid white;
    border-radius: 5px;
    padding: 5px;
    top: 9px;
    left: 9px;
}

.menu-panel {
    background-color: var(--sub1-bg-color);
    position: absolute;
    top: 0px;
    left: 0px;
    width: 80%;
    height: 100%;
    display: none;

    text-overflow: ellipsis;

    /* Required for text-overflow to do anything */
    white-space: nowrap;
    overflow: hidden;
}

.title-menu {
    line-height: 50px;
    text-align: center;
    background-color: var(--main-bg-color);
}

.menu-list {
    list-style: none;
    margin: 0;
    padding: 0;
}

.menu-list-deeper {
    border-top: 3px solid var(--main-bg-color);
    border-bottom: 3px solid var(--main-bg-color);
    padding-left: 1em;
}

.menu-list > li {
    font-size: 14pt;
    font-weight: 300;
    padding: 13px 0 13px 10px;
}

.menu-list > li > a {
    margin: 0px; 
    display: block;
    width: 100%; 
    height: 100%;
}

.menu-list-deeper > li {
    color: var(--sub-text-color);
}

.icon--menu-pane {
    width: 15px;
    height: 15px;
    padding: 0 10px;
}

/** TASK LIST **/
.title--task {
    font-size: 16pt;
}

.box-bottom > .content--number-of-people {
    float: left;
    background-color: var(--sub2-bg-color);
    padding: 5px;
    margin-right: 5px;
    border-radius: 5px;
}

.box-bottom > .content--due-date {
    float: right;
    padding: 5px;
}

.title--task {
    margin: 10px;
}

.content--task {
    margin: 10px 10px 10px 11px;
}

.dropdown-icon--task {
    width: 10px;
    height: 10px;
    margin-left: 5px;
    display: inline-block;
    background-size: cover;
}

#in-progress-people {
    color: var(--notdone-color);
}

#done-people {
    color: var(--done-color);
}

.checkbox-not-done {
    color: var(--notdone-color);
}

.checkbox-done {
    color: var(--done-color);
}

.task-left-side {
    width: calc(100% - 45px);
}

.checkbox {
    position: relative;
    float: right;
    top: 7px;
    right: 7px;
    width: 32px;
    height: 32px;
    background-size: cover;
}

.checkbox-not-checked {
    background-image: url("../image/notdone-checkbox-icon.png");   
}

.checkbox-checked {
    background-image: url("../image/done-checkbox-icon.png");   
}

.button--add-task {
    position: absolute;
    right: 10px;
    bottom: 10px;

    width: 48px;
    height: 48px;

    background-color: var(--sub2-bg-color);
    border-radius: 12px;
}

.icon--add-task {
    width: 32px;
    height: 32px;

    margin-top: 8px;
    margin-left: 8px;
}




/** Landing Page **/
.title--landing-page{
	font-size: 40pt;
	text-align: center;
	margin-top: 40px;
}

.body--landing-page {
	margin: 20px;
	font-size: 13pt;
}

.checkbox--landing-page {
	float: left;
	clear: left;
	position: unset;
	margin: 10px;
}

.nfinished--landing-page {
	float: left;
	height: 100px;
	
}

/** Preference **/
.box-container--preference {
	padding: 10px;
	height: 30px;
}

.theme-option--preference {
	width: 50%;
	float: left;
	text-align: center;
}
.content--preference{
	font-size: 15pt;
	font-weight: 250;
}

.checkbox--preference {
	width: 10px;
	height: 10px;
	background-color: #FFFFFF;
	border: 1px solid #000000;
	display: inline-block;
	margin-right: 5px;
}

.edit-icon--preference {
	padding-top: 5px;
	float: right;
	vertical-align: middle;
}

.group-box-content--preference {
	height: 150px;
	overflow: scroll;
}

.group--preference {
	border-bottom: 2px solid var(--sub1-bg-color);
	width: 98%;
	margin: 0 auto;
	padding-top: 8px;
	padding-bottom: 8px;
}

.group-option--preference {
	float: right;
	padding-top: 4px;
}
.exit-group--preference {
	text-decoration: underline;
}

.info--preference {
	float: right;
	padding-right: 2px;
	padding-left: 2px;
}

.preference--button {
	width: 90px;
	height: 35px;
	float: right;
	text-align: center;
	line-height: 35px;
	margin-right: 10px;
}

